# seam-carving

./: .gitmodules  Cargo.toml  LICENSE  README.md
src/: main.rs  pixel_colors.rs  seam_carving.rs
