[package]
name = "seam-carving"
authors = ["António Ramadas"]
version = "0.1.0"
edition = "2021"
description = "Seam Carving algorithm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
viuer = "0.5.2"
crossterm = "0.22.1"
clap = "2.33.3"
